# K-Zero-Core

./: .env.example  .gitignore  EXTENSIBILITY.md  README.md  main.py  pyproject.toml  requirements.txt
data/: prompts.json
data/plugins/: hello_plugin.py
docs/product/: philosophy.md  release-notes-workflows.md  workflows.md
docs/technical/: extending-workflows.md
k_zero_core/: __init__.py
k_zero_core/audio/: __init__.py  config.py  downloader.py  file_capture.py  io_handler.py  sources.py  stt.py  tts.py
k_zero_core/cli/: console.py  doctor.py  io_setup.py  menus.py  session_setup.py  stt_menu.py  workflow_menus.py
k_zero_core/core/: commands.py  config.py  cuda_fix.py  deliverable_intents.py  exceptions.py  logging_config.py  plugin_loader.py  source_tracking.py  tool_executor.py  tool_output.py  tool_safety.py  tools.py
k_zero_core/core/tools/: __init__.py  analisis_json.py  date_time.py  (+18 more)
k_zero_core/modes/: __init__.py  agent.py  base.py  brain_dump.py  classic.py  companion.py  conversation_flow.py  director.py  director_helpers.py  dungeon_master.py  mode_streaming.py  rag.py  rag_helpers.py  rag_setup.py  transcription_only.py
k_zero_core/services/: chat_session.py  design_md.py  director_engine.py  document_reader.py  embeddings.py  memory_reflection.py  ollama_client.py  prompt_composer.py  rag_engine.py  vector_store.py
k_zero_core/storage/: memory_manager.py  prompt_manager.py  session_manager.py  workflow_manager.py
k_zero_core/workflows/: __init__.py  definitions.py  engine.py  models.py  registry.py
tests/: test_design_md_deliverables.py  test_mult_agent_expansion.py  test_operational_maturity.py  test_priority_plan.py  test_refactor_helpers.py
(+4 files in other folders)
