[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k-zero-core"
version = "0.1.0"
description = "Core library for Voice, RAG, and local LLM orchestration."
authors = [
    { name = "K-Zero Developer" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "faster-whisper",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-runtime-cu12",
    "edge-tts",
    "SpeechRecognition",
    "pygame",
    "pyaudio",
    "pypdf",
    "chromadb",
    "python-dotenv",
    "yt-dlp",
    "psutil",
    "PyAudioWPatch",
    "imageio-ffmpeg",
    "ddgs",
    "pydantic",
    "tenacity",
    "python-docx",
    "openpyxl",
    "python-pptx",
    "reportlab",
    "PyYAML",
]

[project.scripts]
k-zero = "k_zero_core.cli.console:run"

[tool.setuptools.packages.find]
include = ["k_zero_core*"]
